tests/baselines/reference/moduleAugmentationCollidingNamesInAugmentation1.errors.txt
tests/cases/compiler/map1.ts(7,15): error TS2665: Module augmentation cannot introduce new names in the top level scope.
tests/cases/compiler/map2.ts(6,15): error TS2665: Module augmentation cannot introduce new names in the top level scope.


==== tests/cases/compiler/map1.ts (1 errors) ====
    
    import { Observable } from "./observable"
    
    (<any>Observable.prototype).map = function() { }
    
    declare module "./observable" {
        interface I {x0}
                  ~
!!! error TS2665: Module augmentation cannot introduce new names in the top level scope.
    }
    
==== tests/cases/compiler/map2.ts (1 errors) ====
    import { Observable } from "./observable"
    
    (<any>Observable.prototype).map = function() { }
    
    declare module "./observable" {
        interface I {x1}
                  ~
!!! error TS2665: Module augmentation cannot introduce new names in the top level scope.
    }
    
    
==== tests/cases/compiler/observable.ts (0 errors) ====
    export declare class Observable<T> {
        filter(pred: (e:T) => boolean): Observable<T>;
    }
    
==== tests/cases/compiler/main.ts (0 errors) ====
    import { Observable } from "./observable"
    import "./map1";
    import "./map2";
    
    let x: Observable<number>;
    